# deepfellow-cli

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  README.md  RELEASE.md  create-prd.mdc  install-from-gitlab.sh  install.sh  justfile  pyproject.toml
.claude/skills/verify/: SKILL.md
.continue/rules/: create-prd.md  generate-tasks-from-prd.md  generate-tasks-from-prd.mdc
deepfellow/: main.py
deepfellow/cli/: __init__.py  uninstall.py  update.py
deepfellow/common/: colors.py  config.py  defaults.py  docker.py  echo.py  env.py  exceptions.py  generate.py  git.py  install.py  registry.py  rest.py  state.py  system.py  validation.py
deepfellow/infra/: __init__.py  configure.py  connect.py  create_api_key.py  disconnect.py  download.py  install.py  logs.py  models.py  prune.py  restart.py  ssl_on.py  start.py  status.py  stop.py  uninstall.py  update.py
deepfellow/infra/env_command/: __init__.py  info.py  set.py
deepfellow/infra/model/: __init__.py  install.py  uninstall.py
deepfellow/infra/service/: __init__.py  install.py  list.py  uninstall.py
deepfellow/infra/utils/: docker.py  options.py  registry.py  rest.py  validation.py
deepfellow/otel/: __init__.py  logs.py
deepfellow/server/: __init__.py  configure.py  create_admin.py  info.py  install.py  login.py  logout.py  logs.py  opentelemetry.py  password_reset.py  prune.py  restart.py  ssl_on.py  start.py  status.py  stop.py  uninstall.py  update.py
deepfellow/server/env_command/: __init__.py  info.py  set.py
deepfellow/server/organization/: __init__.py  create.py  delete.py  get.py  list.py  utils.py
deepfellow/server/project/: __init__.py  archive.py  create.py  get.py  list.py  utils.py
deepfellow/server/utils/: configure.py  docker.py  login.py  options.py  rest.py  time.py  users.py  validation.py
docs/: INSTALL.md
openspec/specs/app-state/: spec.md
scripts/: check_license_header.py
tasks/: 2025-07-14-DeepFellow-Installation-PRD.md  2025-07-14-DeepFellow-Installation-TASKS.md
tests/: conftest.py
tests/cli/: test_uninstall.py  test_update.py
tests/common/: test_common_config.py  test_common_docker.py  test_common_echo.py  test_common_env.py  test_common_exceptions.py  test_common_install.py  test_common_registry.py  test_common_rest.py  test_common_state.py  test_common_system.py  test_common_validation.py
tests/infra/: test_connect.py  test_disconnect.py  test_env_command_info.py  test_env_command_set.py  test_install.py  test_registry.py  test_restart.py  test_service.py  test_ssl_on.py  test_start.py  test_stop.py  test_update.py
tests/otel/: test_logs.py
tests/scripts/: test_check_license_header.py
tests/server/: test_create_admin.py  test_env_command_info.py  test_env_command_set.py  test_info.py  test_install.py  test_restart.py  test_utils_login.py  test_utils_users.py
tests/server/utils/: test_configure.py  test_options.py
(+8 files in other folders)
