[project]
name = "deepfellow-cli"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
    "types-pyyaml>=6.0.12.20250915",
    "tzlocal>=5.3.1",
    "questionary>=2.0.0",
]

[project.scripts]
deepfellow = "deepfellow.main:app"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
]


[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
line-length = 120
indent-width = 4
target-version = "py310"


[tool.ruff.lint]
ignore = [
    "ANN204", # No return type for __init__ method required
    "ANN401", # Allow for Any in *args and **kwargs
    "B008",   # Do not perform function calls in argument defaults. Required for typer commands.
    "ISC001",
    "D101",   # No docstring for classes required
    "D106",   # No docstring for nested classes required
    "D107",   # No docstrings for __init__ method required
    "D203",
    "D213",
    "D301",
    "D401",   #First line of docstring should be in imperative mood
    "D413",
    "EM101",
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "TRY003",
]
select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "EM",  # flake8-errmsg
    "F",   # flake8
    "G",   # flake8-logging-format
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "Q",   # flake8-quotes
    # "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "T10", # flake8-print
    "TCH", # flake8-type-checking
    "TRY", # tryceratops
    "UP",  # pyupgrade
]

fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "ARG"]
"__init__.py" = ["D"]


[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["var-annotated"]
